--- a/Snitchy Tools/Snitchy Tools.entitlements
+++ b/Snitchy Tools/Snitchy Tools.entitlements
@@ -6,6 +6,8 @@
 	<true/>
 	<key>com.apple.security.files.user-selected.read-write</key>
 	<true/>
+	<key>com.apple.security.personal-information.calendars</key>
+	<true/>
 	<key>com.apple.security.personal-information.location</key>
 	<true/>
 	<key>com.apple.security.print</key>
